src/components/Aside.module.scss
@use '@/styles/components/responsive' as *;

.aside {
  background-color: var(--white);
  position: fixed;
  left: 0;
  top: 0;
  bottom: 0;
  z-index: 2;
  transition: width 0.3s cubic-bezier(0.4, 0, 0.2, 1);
  overflow: hidden;
  padding: 1.5rem 0.75rem;
  isolation: isolate;
  user-select: none;

  @include md-down() {
    display: none;
  }

  &.compact {
    transition-delay: 0.1s; // Small grace period when moving mouse away
  }
}

.compact {
  width: fit-content;

  .linkText {
    display: none;
  }
}

.expanded {
  width: 220px;
  border-right: 1px solid var(--gray-300);
}

.navContainer {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.navList {
  display: flex;
  flex-direction: column;
  gap: 0.1rem;
  margin-top: 2rem;
  list-style: none;
  padding: 0;
}

.link {
  display: flex;
  align-items: center;
  gap: 6px;
  height: 36px;
  padding: 0 8px;
  border-radius: 10px;
  text-decoration: none;
  color: var(--black);
  white-space: nowrap;
  font-weight: 400;
  cursor: pointer;
  will-change: transform;
  transition: transform 0.2s ease;

  &:hover {
    background-color: var(--gray-100);
  }

  &:active {
    transform: scale(0.97);
  }
}

.iconWrapper {
  min-width: 24px;
  display: flex;
  justify-content: center;
  color: var(--black);
}

.linkText {
  color: var(--black);
  white-space: nowrap;
  opacity: 1;
  transition: opacity 0.2s;
}

.linkActive {
  background-color: var(--gray-100);
  color: var(--white);
  font-weight: 500;
}

.logoWrapper {
  display: flex;
  align-items: center;
  gap: 6px;
  padding: 0 8px;
  cursor: pointer;
  width: fit-content;
  will-change: transform;
  transition: transform 0.2s ease;

  &:hover {
    transform: scale(1.03);
  }

  &:active {
    transform: scale(0.98);
  }
}

.logoCap {
  font-size: 1.8rem;
  font-weight: 600;
  line-height: 0;
}

.divider {
  border: none;
  margin: 0.5rem 0;
}

.footerNav {
  margin-top: auto;
}

.more {
  display: flex;
  flex-direction: column;
}

